<resources>
    <string name="app_name">TestApplication</string>
    <string name="title_activity_maps">Map</string>
    <string name="submit">Submit</string>
    <string name="enter_postal_code">Enter Postal Code</string>
    <string name="textview">TextView</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="cuteparks">CuteParks</string>
    <string name="enter_filter_keyword">Enter Keyword</string>
    <string name="enter_your_name">Enter Your Name</string>
    <string name="signup_enter_your_email">Enter Your Email</string>
    <string name="signup_enter_your_password">Enter Your Password</string>
    <string name="complete_signup_button">Sign Up</string>
    <string name="signup_name_edit_text">signupNameEditText</string>
    <string name="sign_up">Sign Up</string>
    <string name="description">Description</string>
    <string name="rating">Rating</string>
    <string name="park">Park</string>
    <string name="park_information">Park Information</string>
    <string name="location">Location</string>
    <string name="address">Address</string>
    <string name="website">Website</string>
    <string name="reviewpark">reviewPark</string>
    <string name="favouritepark">favouritePark</string>
    <string name="sharepark">sharePark</string>
    <string name="share">Share</string>
    <string name="favourite">Favourite</string>
    <string name="review">Review</string>
    <string name="filter_parks">Filter Park Preferences</string>
    <string name="search_keyword">Search keyword in Park Name:</string>
    <string name="filter_by_distance">Select Maximum Distance:</string>
    <string name="filter_by_rating">Select Minimum Rating:(0-5)</string>
    <string name="filter">Filter</string>
    <string name="reviews">Reviews</string>
</resources>
