<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <LinearLayout
        android:layout_width="317dp"
        android:layout_height="364dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.39">

        <TextView
            android:id="@+id/signupHeading"
            android:layout_width="match_parent"
            android:layout_height="79dp"
            android:text="Sign-Up"
            android:textAlignment="center"
            android:textColor="#00897B"
            android:textSize="20pt"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/signupNameEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/enter_your_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/signupEmailEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/signup_enter_your_email"
            android:importantForAutofill="no"
            android:inputType="textPersonName|textEmailAddress" />

        <EditText
            android:id="@+id/signupPasswordEditText"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:ems="10"
            android:hint="@string/signup_enter_your_password"
            android:importantForAutofill="no"
            android:inputType="textPassword" />

        <Space
            android:layout_width="match_parent"
            android:layout_height="15dp" />

        <Button
            android:id="@+id/completeSignupButton"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/complete_signup_button"
            android:textAllCaps="true"
            android:textSize="18sp" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>