<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#BFB8B8"
    android:backgroundTint="@android:color/background_light"
    android:foregroundTint="@android:color/darker_gray"
    android:textAlignment="center"
    tools:context=".DisplayParkInformationActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="202dp" />

    <ImageButton
        android:id="@+id/favouritePark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_background"
        android:contentDescription="@string/favouritepark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.797"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@android:drawable/btn_star_big_on" />

    <ImageButton
        android:id="@+id/reviewPark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_background"
        android:contentDescription="@string/reviewpark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.954"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@android:drawable/ic_menu_edit" />

    <ImageButton
        android:id="@+id/sharePark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/design_default_color_background"
        android:contentDescription="@string/sharepark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.639"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.03"
        app:srcCompat="@android:drawable/ic_menu_share" />

    <TextView
        android:id="@+id/parkName"
        android:layout_width="205dp"
        android:layout_height="56dp"
        android:gravity="fill_horizontal|fill_vertical"
        android:text="Jurong Central Park"
        android:textAlignment="textStart"
        android:textColor="@color/colorPrimary"
        android:textSize="22sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.077"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023" />

    <TextView
        android:id="@+id/Locationtextview"
        android:layout_width="164dp"
        android:layout_height="29dp"
        android:text="@string/location"
        android:textColor="#89A8A5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.141"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <com.google.android.gms.maps.MapView
        android:id="@+id/googleMap"
        android:layout_width="129dp"
        android:layout_height="96dp"
        android:clickable="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.124"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Locationtextview"
        app:layout_constraintVertical_bias="0.007" />

    <TextView
        android:id="@+id/DescriptiontextView"
        android:layout_width="140dp"
        android:layout_height="33dp"
        android:contentDescription="@android:string/fingerprint_icon_content_description"
        android:text="@string/description"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="#89A8A5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.129"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.121" />

    <TextView
        android:id="@+id/parkDescription"
        android:layout_width="341dp"
        android:layout_height="90dp"
        android:layout_marginBottom="10dp"
        android:overScrollMode="ifContentScrolls"
        android:scrollIndicators="right"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbarDefaultDelayBeforeFade="500"
        android:scrollbarFadeDuration="300"
        android:scrollbarSize="5dp"
        android:scrollbarStyle="outsideInset"
        android:scrollbars="vertical"
        android:scrollHorizontally="false"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/RatingtextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.493"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptiontextView"
        app:layout_constraintVertical_bias="0.0" />

    <RatingBar
        android:id="@+id/parkRatingBar"
        style="@style/Widget.AppCompat.RatingBar"
        android:layout_width="240dp"
        android:layout_height="49dp"
        android:isIndicator="true"
        android:max="5"
        android:numStars="5"
        android:progressTint="#8B009688"
        android:stepSize="0.1"
        app:layout_constraintBottom_toTopOf="@+id/Locationtextview"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.204"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/RatingtextView"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/RatingtextView"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:contentDescription="@string/rating"
        android:text="@string/rating"
        android:textColor="#89A8A5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.106"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/ratingtextView"
        android:layout_width="81dp"
        android:layout_height="32dp"
        android:contentDescription="@string/rating"
        android:gravity="left|center_vertical"
        android:text="/5.0"
        android:textColor="#B5B5B5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.324" />

    <TextView
        android:id="@+id/parkRating"
        android:layout_width="58dp"
        android:layout_height="33dp"
        android:gravity="center_horizontal"
        android:text="4.7"
        android:textColor="#516764"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ratingtextView"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toEndOf="@+id/RatingtextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.323" />

    <TextView
        android:id="@+id/parkWebsite"
        android:layout_width="346dp"
        android:layout_height="52dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.546"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Websitetextview"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/Websitetextview"
        android:layout_width="254dp"
        android:layout_height="24dp"
        android:text="@string/website"
        android:textColor="#89A8A5"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.222"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.694" />

    <TextView
        android:id="@+id/parkAddress"
        android:layout_width="205dp"
        android:layout_height="96dp"
        android:gravity="center_vertical"
        android:textColor="#999E9D"
        android:textSize="13sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.261"
        app:layout_constraintStart_toEndOf="@+id/googleMap"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.576" />

    <Button
        android:id="@+id/readReviewsButton"
        android:layout_width="101dp"
        android:layout_height="41dp"
        android:layout_marginEnd="36dp"
        android:text="reviews"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/parkRatingBar"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.386" />

</androidx.constraintlayout.widget.ConstraintLayout>